--- a/src/calendario_mesa.html
+++ b/src/calendario_mesa.html
@@ -10,7 +10,31 @@
     <script src="js/calendario.js"></script>
   </head>
   <body>
-    <div id="calendar"></div>
     <input type="date" min="2023-02-23" id="">
+    <form>
+      SELECCIONE SU MESA:
+        <select>
+          <option>Mesa 1</option>
+          <option>Mesa 2</option>
+          <option>Mesa 3</option>
+          <option>Mesa 4</option>
+          <option>Mesa 5</option>
+          <option>Mesa 6</option>
+          <option>Mesa 7</option>
+          <option>Mesa 8</option>
+          <option>Mesa 9</option>
+          <option>Mesa 10</option>
+          <option>Mesa 11</option>
+          <option>Mesa 12</option>
+          <option>Mesa 13</option>
+          <option>Mesa 14</option>
+          <option>Mesa 15</option>
+          <option>Mesa 16</option>
+          <option>Mesa 17</option>
+          <option>Mesa 18</option>
+          <option>Mesa 19</option>
+          <option>Mesa 20</option>
+        </select>
+    </form>
   </body>
 </html>
