navegar reserva y contacto

--- a/src/opciones.html
+++ b/src/opciones.html
@@ -12,8 +12,9 @@
 <body>
     <div>
         <img src="./img/logo.png">
-        <button class="btnReservaMesa">Reservar mesa</button>
-        <button class="btnContacto">Contáctenos</button>
+        <button class="btnReservaMesa" id="btnReservarMesa">Reservar mesa</button>
+        <button class="btnContacto" id="btnContactenos">Contactenos</button>
     </div>
 </body>
 </html>
+
