--- a/src/calendario_mesa.html
+++ b/src/calendario_mesa.html
@@ -14,6 +14,7 @@
     <form>
       SELECCIONE SU MESA:
         <select>
+          <option value="" selected disabled>Selecciona tu Mesa</option>
           <option>Mesa 1</option>
           <option>Mesa 2</option>
           <option>Mesa 3</option>
@@ -36,5 +37,8 @@
           <option>Mesa 20</option>
         </select>
     </form>
+    <button>RESERVAR</button>
+
+
   </body>
 </html>
