--- a/src/calendario_mesa.html
+++ b/src/calendario_mesa.html
@@ -10,9 +10,9 @@
     <script src="js/calendario.js"></script>
   </head>
   <body>
-    <input type="date" min="2023-02-23" id="">
-    <form>
-      SELECCIONE SU MESA:
+    <input type="date" min="2023-02-23" id=""> 
+    <form> <br />
+      SELECCIONE SU MESA: <br />
         <select>
           <option value="" selected disabled>Selecciona tu Mesa</option>
           <option>Mesa 1</option>
@@ -36,7 +36,7 @@
           <option>Mesa 19</option>
           <option>Mesa 20</option>
         </select>
-    </form>
+    </form> <br />
     <button>RESERVAR</button>
 
 
